<resources>
    <string name="app_name">ETA@HK</string>
    <string name="app_name_full">ETA@HK</string>
    <string name="title_bus_search">Bus Routes</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="long_text">QWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQWQW</string>
    <string name="aan_sc_follow" translatable="false">.Shortcut.Follow</string>
    <string name="aan_sc_favourite" translatable="false">.Shortcut.Favourite</string>
    <string name="aan_sc_history" translatable="false">.Shortcut.History</string>
    <string name="aan_sc_bus" translatable="false">.Shortcut.Bus</string>
    <string name="nc_id_update_routes" translatable="false">update_routes</string>
    <string name="nc_name_update_routes" translatable="false">Update routes data</string>
    <string name="notification_title_update_routes">Updating routes data</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="last_update">Last Update:\u0020</string>
    <string name="nav_follow">Following Stops</string>
    <string name="nav_fh">Common Routes</string>
    <string name="nav_bus">Bus</string>
    <string name="nav_mb">Minibus</string>
    <string name="nav_tram">Tram</string>
    <string name="nav_mtr">MTR</string>
    <string name="sc_follow_s">Following</string>
    <string name="sc_follow_l">Following Stops</string>
    <string name="sc_favourite_s">Favourite</string>
    <string name="sc_favourite_l">Favourite Routes</string>
    <string name="sc_history_s">History</string>
    <string name="sc_history_l">History</string>
    <string name="sc_bus_s">Bus</string>
    <string name="sc_bus_l">Bus Routes</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="maps">Maps</string>
    <string name="timetable">Timetable</string>
    <string name="settings">Settings</string>
    <string name="play_store">Play Store</string>
    <string name="github">GitHub</string>
    <string name="location_options">Location Options</string>
    <string name="add_location">Add Location</string>
    <string name="edit_c_location">Edit Current Location</string>
    <string name="remove_c_location">Remove Current Location</string>
    <string name="sort_locations">Sort Locations</string>
    <string name="group_options">Destination Options</string>
    <string name="add_group">Add Destination</string>
    <string name="rename_c_group">Rename Current Destination</string>
    <string name="remove_c_group">Delete Current Destination</string>
    <string name="sort_groups">Sort Destination</string>
    <string name="get_my_location">Get Current Location</string>
    <string name="show_nearby_stops">Show Nearby Stops</string>
    <string name="enable_sort">Enable Sorting</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="rename">Rename</string>
    <string name="move_to">Move to \u2026</string>
    <string name="remove">Remove</string>
    <string name="refresh_route_info">Refresh Route Info</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="view_another_company">View in another company</string>
    <string name="add_to_follow_stop">Add to following stops</string>
    <string name="view_route">View route</string>
    <string name="select_location">Select Location</string>
    <string name="clear">Clear</string>
    <string name="exit_app">Exit App</string>
    <string name="to_prefix">To\u0020</string>
    <string name="to_middle">\u0020to\u0020</string>
    <string name="min">min</string>
    <string name="price_2dp" translatable="false">$%.2f</string>
    <string name="arrow_circular" translatable="false">\u0020⟲\u0020</string>
    <string name="arrow_one_way" translatable="false">\u0020→\u0020</string>
    <string name="arrow_two_ways" translatable="false">\u0020⇄\u0020</string>
    <string name="html_link" translatable="false">&lt;a href=\'%1$s\'>%2$s&lt;/a></string>
    <string name="system_default">System Default</string>
    <string name="tc">Traditional Chinese (繁體中文)</string>
    <string name="en">English</string>
    <string name="kmb">KMB</string>
    <string name="lwb">LWB</string>
    <string name="nwfb">NWFB</string>
    <string name="ctb">CTB</string>
    <string name="nlb">NLB</string>
    <string name="tram">Tram</string>
    <string name="mtr">MTR</string>
    <string name="all">All</string>
    <string name="kln">KLN</string>
    <string name="nt">NT</string>
    <string name="kln_nt">KLN/NT</string>
    <string name="hki">HK</string>
    <string name="cross_harbour">Cross Harbour</string>
    <string name="airport">Airport</string>
    <string name="lantau">Lantau</string>
    <string name="airport_lantau">Airport/Lantau</string>
    <string name="overnight">Overnight</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="stop_only_for_particular_time">Only stop at particular time</string>
    <string name="stop_fare_holiday">Fare in holiday:\u0020</string>
    <string name="eta_msg_no_eta_service">No ETA Service</string>
    <string name="eta_msg_not_in_service_hours">Not in service hours</string>
    <string name="eta_msg_no_eta_info">No ETA Information</string>
    <string name="pref_general" translatable="false">general</string>
    <string name="pref_language" translatable="false">language</string>
    <string name="pref_update_routes" translatable="false">update_routes</string>
    <string name="pref_backup_restore" translatable="false">backup_restore</string>
    <string name="pref_backup" translatable="false">backup</string>
    <string name="pref_restore" translatable="false">restore</string>
    <string name="pref_about" translatable="false">about</string>
    <string name="pref_app_name" translatable="false">app_name</string>
    <string name="pref_app_version" translatable="false">app_version</string>
    <string name="pref_privacy_policy" translatable="false">privacy_policy</string>
    <string name="pref_disclaimer" translatable="false">disclaimer</string>
    <string name="pref_licenses" translatable="false">licenses</string>
    <string name="pref_testing" translatable="false">testing</string>
    <string name="pref_parameters" translatable="false">parameters</string>
    <string name="pref_summary_app_name" translatable="false">Simon Hui \u00A9 2018-2019</string>
    <string name="pref_category_title_general">General</string>
    <string name="pref_title_language">Language (語言)</string>
    <string name="pref_title_update_routes">Update routes data now</string>
    <string name="pref_category_title_backup_restore">Backup and Restore</string>
    <string name="pref_title_backup">Backup</string>
    <string name="pref_summary_backup">Backup all personal data and settings</string>
    <string name="pref_title_restore">Restore</string>
    <string name="pref_summary_restore">Restore personal data and settings from backup</string>
    <string name="pref_category_title_about">About</string>
    <string name="pref_title_app_version">App version</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_summary_privacy_policy">Read Privacy Policy of this app</string>
    <string name="pref_title_disclaimer">Disclaimer</string>
    <string name="pref_summary_disclaimer">Read Disclaimer of this app</string>
    <string name="pref_title_licenses">Open source licenses</string>
    <string name="pref_summary_licenses">License details for open source software</string>
    <string name="pref_category_title_testing">Testing</string>
    <string name="pref_title_parameters">Parameters</string>
    <string name="pref_summary_parameters">View and edit parameters</string>
    <string name="param_category_app" translatable="false">App</string>
    <string name="param_app_mode" translatable="false">app_mode</string>
    <string name="param_paged_list_page_size" translatable="false">paged_list_page_size</string>
    <string name="param_category_gist" translatable="false">Gist</string>
    <string name="param_gist_id_kmb" translatable="false">gist_id_kmb</string>
    <string name="param_gist_id_nwfb" translatable="false">gist_id_nwfb</string>
    <string name="param_category_ok_http" translatable="false">OkHttp</string>
    <string name="param_user_agent" translatable="false">user_agent</string>
</resources>