<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_general"
        android:title="@string/pref_category_title_general"
        android:order="10">

        <!--suppress AndroidDomInspection -->
        <ListPreference
            android:key="@string/pref_language"
            android:title="@string/pref_title_language"
            android:entries="@array/pref_entries_language"
            android:entryValues="@array/pref_values_language"
            android:defaultValue="" />

        <Preference
            android:key="@string/pref_update_routes"
            android:title="@string/pref_title_update_routes"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_bus"
        android:title="@string/pref_category_title_bus"
        android:order="20">

        <ListPreference
            android:key="@string/pref_bus_jointly"
            android:title="@string/pref_title_bus_jointly"
            android:entries="@array/pref_entries_bus_jointly"
            android:entryValues="@array/pref_values_bus_jointly"
            android:defaultValue="2" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_backup_restore"
        android:title="@string/pref_category_title_backup_restore"
        android:order="80">

        <Preference
            android:key="@string/pref_backup"
            android:title="@string/pref_title_backup"
            android:summary="@string/pref_summary_backup"
            android:persistent="false" />

        <Preference
            android:key="@string/pref_restore"
            android:title="@string/pref_title_restore"
            android:summary="@string/pref_summary_restore"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_about"
        android:title="@string/pref_category_title_about"
        android:order="120">

        <Preference
            android:key="@string/pref_app_name"
            android:title="@string/app_name"
            android:summary="@string/pref_summary_app_name"
            android:persistent="false" />

        <Preference
            android:key="@string/pref_app_version"
            android:title="@string/pref_title_app_version"
            android:persistent="false" />

        <Preference
            android:key="@string/pref_privacy_policy"
            android:title="@string/pref_title_privacy_policy"
            android:summary="@string/pref_summary_privacy_policy"
            android:persistent="false" />

        <Preference
            android:key="@string/pref_disclaimer"
            android:title="@string/pref_title_disclaimer"
            android:summary="@string/pref_summary_disclaimer"
            android:persistent="false" />

        <PreferenceScreen
            android:key="@string/pref_licenses"
            android:title="@string/pref_title_licenses"
            android:summary="@string/pref_summary_licenses"
            android:persistent="false">

            <!--<intent-->
                <!--android:action="android.intent.action.VIEW"-->
                <!--android:targetClass="hoo.hktranseta.main.WebViewActivity"-->
                <!--android:targetPackage="hoo.hktranseta"-->
                <!--android:data="@string/open_source_licenses_path">-->
                <!--<extra-->
                    <!--android:name="title"-->
                    <!--android:value="@string/open_source_licenses" />-->
                <!--<extra-->
                    <!--android:name="url"-->
                    <!--android:value="@string/open_source_licenses_path" />-->
            <!--</intent>-->

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_testing"
        android:title="@string/pref_category_title_testing"
        android:order="130">

        <Preference
            android:key="@string/pref_parameters"
            android:title="@string/pref_title_parameters"
            android:summary="@string/pref_summary_parameters"
            android:singleLine="false" />

    </PreferenceCategory>

</PreferenceScreen>
