<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hoo.etahk.view.follow.FollowActivity">

    <item
        android:id="@+id/menu_show_nearby_stops"
        android:title="@string/show_nearby_stops"
        android:orderInCategory="10"
        android:icon="@drawable/ic_menu_nearby"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_get_my_location"
        android:title="@string/get_my_location"
        android:orderInCategory="20"
        android:icon="@drawable/ic_menu_gps_on"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_location_options"
        android:title="@string/location_options"
        android:orderInCategory="100"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_add_location"
                android:orderInCategory="110"
                android:title="@string/add_location" />
            <item
                android:id="@+id/menu_edit_location"
                android:orderInCategory="120"
                android:title="@string/edit_c_location" />
            <item
                android:id="@+id/menu_remove_location"
                android:orderInCategory="130"
                android:title="@string/remove_c_location" />
            <item
                android:id="@+id/menu_sort_locations"
                android:orderInCategory="140"
                android:title="@string/sort_locations"
                android:visible="false" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_group_options"
        android:title="@string/group_options"
        android:orderInCategory="200"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_add_group"
                android:orderInCategory="210"
                android:title="@string/add_group" />
            <item
                android:id="@+id/menu_rename_group"
                android:orderInCategory="220"
                android:title="@string/rename_c_group" />
            <item
                android:id="@+id/menu_remove_group"
                android:orderInCategory="230"
                android:title="@string/remove_c_group" />
            <item
                android:id="@+id/menu_sort_groups"
                android:orderInCategory="240"
                android:title="@string/sort_groups"
                android:enabled="false" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_sort_items"
        android:orderInCategory="310"
        android:title="@string/enable_sort_items"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_shortcut"
        android:orderInCategory="910"
        android:title="@string/create_shortcut"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="920"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
