<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hoo.etahk.view.route.RouteActivity">

    <item
        android:id="@+id/menu_maps"
        android:title="@string/maps"
        android:orderInCategory="10"
        android:icon="@drawable/ic_menu_maps"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_timetable"
        android:title="@string/maps"
        android:orderInCategory="20"
        android:icon="@drawable/ic_menu_timetable"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_another_company"
        android:orderInCategory="210"
        android:title="@string/view_another_company"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh_route_info"
        android:orderInCategory="310"
        android:title="@string/refresh_route_info"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_favourite"
        android:orderInCategory="320"
        android:title="@string/add_to_favourite"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_shortcut"
        android:orderInCategory="910"
        android:title="@string/create_shortcut"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="920"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
